--- a/app/assets/stylesheets/base/_font.scss
+++ b/app/assets/stylesheets/base/_font.scss
@@ -31,6 +31,7 @@
   src: url('IBMPlexSans-Light.woff2') format('woff2');
   font-display: swap;
 }
+
 @font-face {
   font-family: 'Noto Color Emoji';
   font-style: normal;
@@ -50,60 +51,74 @@ h2 {
   font-weight: 500;
   margin: 40px 0 24px 0;
 }
-h3{
+
+h3 {
   font-size: 20px;
   font-weight: 500;
   margin: 24px 0 16px 0;
 }
-p{
+
+p {
   color: $text-color;
   font-size: 18px;
   line-height: 130%;
 }
+
 .semi-bold {
   font-weight: 600;
 }
+
 .medium {
   font-weight: 500;
 }
 
-.underline{
+.underline {
   text-decoration: underline;
 }
-.date{
+
+.date {
   font-weight: 300;
   margin-top: 16px;
 }
-.center{
+
+.center {
   text-align: center;
 }
 
-h1,h2,h3 {
+h1,
+h2,
+h3 {
   color: $primary-color;
 }
-p{
+
+p {
   color: $text-color;
 }
 
-.black{
+.black {
   color: $primary-color;
 }
+
 body.dark h1 {
   color: $secondary-color;
 }
+
 body.dark h2 {
   color: $secondary-color;
 }
-body.dark h3{
+
+body.dark h3 {
   color: $secondary-color;
 }
-body.dark p{
+
+body.dark p {
   color: $dark-text-color;
 }
 
-body.dark .black{
+body.dark .black {
   color: $secondary-color;
 }
+
 @media screen and (min-width:426px) and (max-width: 600px) {
   h1 {
     font-size: 26px;
@@ -113,14 +128,17 @@ body.dark .black{
     font-size: 21px;
     margin: 24px 0 16px 0;
   }
-  h3{
+
+  h3 {
     font-size: 19px;
     margin: 16px 0 8px 0;
   }
-  p{
+
+  p {
     font-size: 17px;
   }
 }
+
 @media screen and (max-width: 425px) {
   h1 {
     font-size: 24px;
@@ -130,11 +148,13 @@ body.dark .black{
     font-size: 20px;
     margin: 24px 0 16px 0;
   }
-  h3{
+
+  h3 {
     font-size: 18px;
     margin: 16px 0 8px 0;
   }
-  p{
+
+  p {
     font-size: 16px;
   }
 }
@@ -172,30 +192,38 @@ body.dark .black{
 // }
 
 @media (prefers-color-scheme: light) {
-  h1,h2,h3 {
+
+  h1,
+  h2,
+  h3 {
     color: $primary-color;
   }
-  p{
+
+  p {
     color: $text-color;
   }
 
-  .black{
+  .black {
     color: $primary-color;
   }
+
   body.dark h1 {
     color: $secondary-color;
   }
+
   body.dark h2 {
     color: $secondary-color;
   }
-  body.dark h3{
+
+  body.dark h3 {
     color: $secondary-color;
   }
-  body.dark p{
+
+  body.dark p {
     color: $dark-text-color;
   }
 
-  body.dark .black{
+  body.dark .black {
     color: $secondary-color;
   }
 }
