--- a/app/assets/stylesheets/components/_cardref.scss
+++ b/app/assets/stylesheets/components/_cardref.scss
@@ -1,5 +1,6 @@
 @import 'abstracts/variables';
-.card-ref{
+
+.card-ref {
   overflow: hidden;
   width: calc(26% - 1.2vw);
   max-width: 320px;
@@ -7,24 +8,27 @@
   display: flex;
   align-items: end;
   border: 1px solid #E9E9E9;
-  border-radius:5px;
+  border-radius: 5px;
   position: relative;
 }
-.card-title{
+
+.card-title {
   position: relative;
   font-weight: 500;
   font-size: 24px;
 
-  color:$secondary-color;
+  color: $secondary-color;
   padding: 20px;
 }
+
 .default-overlay {
-  border-radius:5px;
+  border-radius: 5px;
   width: 100%;
   height: 100%;
   position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
 .overlay-card-ref {
   border-radius: 5px;
   width: 100%;
@@ -35,78 +39,169 @@
   justify-content: center;
   gap: 64px;
   background-color: rgba(0, 0, 0, 0.7);
+
   svg {
     scale: 1.5;
   }
 }
+
+// Card list
+.flex-card-list {
+  margin-top: 32px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 55px;
+}
+
+.card-list {
+  overflow: hidden;
+  width: 17.5vw;
+  aspect-ratio: 1 / 1;
+  display: flex;
+  align-items: end;
+  border: 1px solid #E9E9E9;
+  border-radius: 5px;
+  position: relative;
+}
+
 @media screen and (max-width: 350px) {
-  .card-ref{
+  .card-ref {
     width: 80%;
   }
-  .card-title{
-    font-size: 24px;
+
+  .card-title {
+    font-size: 18px;
     padding: 10px;
   }
+
   .overlay-card-ref {
     gap: 24px;
+
     svg {
       scale: 1.1;
     }
   }
+
+  // Card list
+  .flex-card-list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+  }
+
+  .card-list {
+    width: 40vw;
+  }
+
 }
+
 @media screen and (min-width:351px) and (max-width: 600px) {
-  .card-ref{
+  .card-ref {
     width: calc(50% - 16px);
   }
-  .card-title{
+
+  .card-title {
     font-size: 22px;
     padding: 10px;
   }
+
   .overlay-card-ref {
     gap: 32px;
+
     svg {
       scale: 1.2;
     }
   }
+
+  // Card list
+  .flex-card-list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+  }
+
+  .card-list {
+    width: 40vw;
+  }
 }
+
 @media screen and (min-width:601px) and (max-width: 768px) {
-  .card-ref{
+  .card-ref {
     width: calc(35% - 2.5vw);
   }
-  .card-title{
+
+  .card-title {
     font-size: 22px;
     padding: 10px;
   }
+
   .overlay-card-ref {
     gap: 32px;
+
     svg {
       scale: 1.2;
     }
   }
+
+  // Card list
+  .flex-card-list {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 24px;
+  }
+
+  .card-list {
+    width: 27vw;
+  }
 }
+
 @media screen and (min-width:769px) and (max-width: 1024px) {
-  .card-ref{
+  .card-ref {
     width: calc(50% - 0.6vw);
   }
-  .card-title{
+
+  .card-title {
     font-size: 24px;
     padding: 10px;
   }
+
   .overlay-card-ref {
     gap: 48px;
+
     svg {
       scale: 1.3;
     }
+  }
+
+  // Card list
+  .flex-card-list {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 15px;
+  }
+
+  .card-list {
+    width: 25vw;
   }
 }
+
 @media screen and (min-width:1025px) and (max-width: 1280px) {
-  .card-ref{
+  .card-ref {
     width: calc(33% - 0.5vw);
   }
+
   .overlay-card-ref {
     gap: 48px;
+
     svg {
       scale: 1.3;
     }
+  }
+
+  // Card list
+  .flex-card-list {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 15px;
+  }
+
+  .card-list {
+    width: 16vw;
   }
 }
