--- a/app/assets/stylesheets/pages/_log.scss
+++ b/app/assets/stylesheets/pages/_log.scss
@@ -1,4 +1,5 @@
 @import 'abstracts/variables';
+
 .logo-log {
   margin-left: 32px;
 }
@@ -15,18 +16,29 @@
 .box-log {
   padding: 0px 8vw
 }
-.box-log h1{
+
+.box-log h1 {
   color: $secondary-color;
   margin-top: 180px;
+}
+
+.box-log p {
+  color: $secondary-color;
+}
+
+.box-log p a {
+  color: $secondary-color;
+  text-decoration: underline;
+  font-weight: 500;
 }
 
 .form {
   margin-top: 32px;
   width: 55vw;
   display: flex;
-  gap: 16px;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  gap: 36px;
+
   height: 100%;
   padding: 30px 50px;
   border-radius: 5px;
@@ -40,12 +52,14 @@
   gap: 16px;
   flex-direction: column;
 }
-.sign-up-in{
+
+.sign-up-in {
   font-weight: 300;
   line-height: 130%;
   color: $secondary-color;
   text-align: center;
-  &:hover{
+
+  &:hover {
     text-decoration: underline;
   }
 }
@@ -54,20 +68,26 @@
 .forgot-password {
   color: #fff;
 }
+
 .sign-up-in:hover,
-.forgot-password:hover{
+.forgot-password:hover {
   text-decoration: underline;
 }
-.forgot-password{
+
+.forgot-password {
   text-align: right;
 }
-.sign-up-in, .email-confirmation{
+
+.sign-up-in,
+.email-confirmation {
   text-align: center;
 }
-.email-confirmation{
+
+.email-confirmation {
   color: #ededed;
   font-size: 16px;
 }
+
 .btn-login {
   margin-top: 16px;
   width: 22vw;
@@ -97,56 +117,67 @@
 .rgpd {
   width: 50vw;
 }
-.rgpd-label{
+
+.rgpd-label {
   line-height: 130%;
 }
+
 .rgpd a {
   color: $secondary-color;
   font-weight: 500;
 }
 
-.remember-me{
-  margin-top:-32px;
+.remember-me {
+  margin-top: -32px;
   width: fit-content;
 }
-.title-boxlog{
+
+.title-boxlog {
   font-size: 24px;
   color: #fff;
 }
 
 @media screen and (min-width:769px) and (max-width: 1024px) {
-  .log{
+  .log {
     padding-bottom: 96px;
   }
+
   .box-log {
     padding: 0px 4vw
   }
-  .form{
+
+  .form {
     width: 53vw;
     padding: 32px;
   }
+
   .btn-login {
     width: 100%;
     height: 65px;
   }
 
-  .title-boxlog{
+  .title-boxlog {
     font-size: 18px;
   }
 }
+
 @media screen and (min-width:601px) and (max-width: 768px) {
-  .log{
+  .log {
     padding-bottom: 96px;
   }
+
   .box-log {
     padding: 0px 4vw
   }
+
   .form {
     width: calc(90vw - 100px);
   }
-  .actions{
+
+  .actions {
     margin: 0;
   }
+
   .btn-login {
     width: 100%;
     height: 65px;
@@ -155,40 +186,50 @@
   .rgpd {
     width: 80vw;
   }
+
   .remember-me {
     margin-top: 8px;
   }
-  .forgot-password{
+
+  .forgot-password {
     text-align: left;
   }
-  .title-boxlog{
+
+  .title-boxlog {
     font-size: 18px;
   }
 }
+
 @media screen and (min-width:426px) and (max-width: 600px) {
-  .box-log h1{
+  .box-log h1 {
     margin-top: 165px;
   }
+
   .logo-log {
-    width:30vw;
+    width: 30vw;
     min-width: 160px;
   }
 
 }
+
 @media screen and (min-width:0px) and (max-width: 600px) {
-  .log{
+  .log {
     padding-bottom: 96px;
   }
+
   .box-log {
     padding: 0px 4vw
   }
+
   .form {
     width: 82vw;
     padding: 24px 4vw
   }
-  .actions{
+
+  .actions {
     margin: 0;
   }
+
   .btn-login {
     width: 100%;
     height: 65px;
@@ -197,22 +238,27 @@
   .rgpd {
     width: 80vw;
   }
+
   .remember-me {
     margin-top: 8px;
   }
-  .forgot-password{
+
+  .forgot-password {
     text-align: left;
   }
-  .title-boxlog{
+
+  .title-boxlog {
     font-size: 18px;
   }
 }
+
 @media screen and (min-width:0px) and (max-width:425px) {
   .logo-log {
-    width:40vw;
+    width: 40vw;
     min-width: 130px;
   }
-  .box-log h1{
+
+  .box-log h1 {
     margin-top: 145px;
   }
 }
