--- a/app/views/pages/validation.html.erb
+++ b/app/views/pages/validation.html.erb
@@ -88,7 +88,15 @@
         <% @oeuvres.each do |oeuvre| %>
           <% if !oeuvre.validation %>
             <tr>
-              <td><%= oeuvre.nom_oeuvre %></td>
+
+            <td><%= oeuvre.nom_oeuvre %>
+           
+         <% if oeuvre.image.attached? && oeuvre.image_variant.present? %>
+  <%= image_tag oeuvre.image_variant %>
+<% else %>
+  <p>Aucune image attachée.</p>
+<% end %>
+
               <td><%= I18n.l(oeuvre.created_at, format: :long) %></td>
               <td>
                 <% if oeuvre.user_id.present? %>
